# tivit-test

./: .gitignore  README.md  docker-compose.yaml  dockerfile  hello.py  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/common/: basedb.py  basemodel.py  depedencies.py  helper.py  logger.py  oauth.py
src/config/: settings.py
src/database/: oauth.py
src/resource/: health.py  oauth.py  user.py
src/schema/: health.py  oauth.py  user.py
src/service/: oauth.py
tests/: conftest.py  test_doc.py  test_health.py  test_oauth.py  test_others.py  test_scalar.py  test_user.py
