[project]
name = "tivit-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "guvicorn-logger>=0.1.17",
    "orjson>=3.10.13",
    "passlib[bcrypt]>=1.7.4",
    "pyhumps>=3.8.0",
    "pysqlx-engine>=0.3.2",
    "python-jose[cryptography]>=3.3.0",
    "scalar-fastapi>=1.0.3",
]

[tool.uv]
dev-dependencies = [
    "asgi-lifespan>=2.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "pytest-cov>=6.0.0",
    "pytest-dotenv>=0.5.2",
    "taskipy>=1.14.1",
]


# ruff
[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]
ignore = ["E402", "F403", "F405"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true

[tool.pytest.ini_options]
pythonpaths = "."
addopts = "-p no:warnings"
asyncio_default_fixture_loop_scope = "session"
env_files = [".env"]

[tool.taskipy.tasks]
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix --select I && ruff format ."
pre_test = 'task lint'
test = "pytest tests -vv -x -s --cov=."
cov = "coverage html"
